# genetics-database-server

./: Cargo.toml  Procfile  README.md  rustfmt.toml  set_up_database.sql
db/: response_codes.txt  set_up_database.sql
src/: main.rs  raw_query.rs  util.rs
www/: index.html  index.js
