[package]
name = "genetics-database"
version = "0.1.0"
authors = ["Brian Bowman <seeker14491@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.26"
deadpool-postgres = { version = "0.5.4", default-features = false }
futures = "0.3.4"
percent-encoding = "2.1.0"
tokio = { version = "0.2.11", features = ["macros"] }
tokio-postgres = "0.5.2"
warp = "0.2.1"
